<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="360dp"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_height="70dp"
  android:layout_gravity="bottom|right"
  android:id="@+id/fragment_search"
  android:orientation="horizontal"
  tools:context=".controller.SearchFragment">


  <TextView
    android:id="@+id/search_box"
    android:layout_width="250dp"
    android:textStyle="bold|italic"
    android:layout_height="40dp"
    android:layout_weight="2"
    android:gravity="center"
    android:background="#CCCCCC"
    android:text="Betelgeuse"
    />

  <Button
    android:id="@+id/search_button"
    android:layout_width="45dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:gravity="center"
    android:paddingEnd="6dp"
    android:drawableEnd="@android:drawable/ic_menu_search"
    android:drawableTint="@color/design_default_color_primary_dark"
    app:layout_constraintBottom_toBottomOf="@id/search_box"
    app:layout_constraintLeft_toRightOf="@id/search_box"
    app:layout_constraintTop_toTopOf="@id/search_box"
    />

  <Button
    android:id="@+id/cancel_search"
    android:layout_width="50dp"
    android:layout_height="20dp"
    android:layout_weight="1"
    android:paddingEnd="6dp"
    android:background="@null"
    android:text="Cancel"
    android:textColor="@color/colorAccent"
    android:textSize="10dp"
    app:layout_constraintLeft_toRightOf="@id/search_box"
    app:layout_constraintTop_toBottomOf="@id/search_button"
    />

  <!--f70202-->
</android.support.constraint.ConstraintLayout>